--- a/persional-center/persion-message/src/main/resources/application.yml
+++ b/persional-center/persion-message/src/main/resources/application.yml
@@ -2,34 +2,60 @@ spring:
   profiles:
     active: pro
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    type: com.alibaba.druid.pool.DruidDataSource
-    # 驱动包 8.0以上的配置
-    # =========== durid 连接池配置===========
     druid:
-      # 初始化连接大小
-      initial-size: 5
-      #最大连接池数量
-      max-active: 20
-      # 最小连接池数量
-      min-idle: 3
-      # 配置获取连接等待超时的时间 单位毫秒
-      max-wait: 60000
-      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-      time-between-eviction-runs-millis: 60000
-      min-evictable-idle-time-millis: 300000
-      validation-query: select
-      test-while-idle: true
-
-      test-on-borrow: false
-      test-on-return: false
-      pool-prepared-statements: true
-
-      filters: stat,wall,slf4j
-      max-pool-prepared-statement-per-connection-size: 20
-      use-global-data-source-stat: true
-      connect-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
-
+      stat-view-servlet:
+        enabled: true
+        loginUsername: admin
+        loginPassword: admin
+    dynamic:
+      primary: master #设置默认的数据源或者数据源组,默认值即为master
+      druid: #以下是全局默认值，可以全局更改
+        initial-size: 5
+        #最大连接池数量
+        max-active: 20
+        # 最小连接池数量
+        min-idle: 3
+        # 配置获取连接等待超时的时间 单位毫秒
+        max-wait: 60000
+        # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+        time-between-eviction-runs-millis: 60000
+        # 配置一个连接在池中最小生存的时间，单位是毫秒
+        min-evictable-idle-time-millis: 300000
+        # 测试连接
+        validation-query: select
+        # 申请连接的时候检测，建议配置为true，不影响性能，并且保证安全性
+        test-while-idle: true
+        # 获取连接时执行检测，建议关闭，影响性能
+        test-on-borrow: false
+        # 归还连接时执行检测，建议关闭，影响性能
+        test-on-return: false
+        # 打开PSCache，并且指定每个连接上PSCache的大小
+        pool-prepared-statements: true
+        #      配置监控统计拦截器 防火墙 日志配置
+        #      stat监控数据库性能
+        #      wall  用于防火墙
+        #      日志 slf4j logback
+        #      log4j
+        #      log4j2
+        # 配置多个英文逗号分隔
+        filters: stat,wall,slf4j
+        max-pool-prepared-statement-per-connection-size: 20
+        # 合并多个DruidDataSource的监控数据
+        use-global-data-source-stat: true
+      datasource:
+        master: # 写数据源
+          username: root
+          password: root
+          url: "jdbc:mysql://47.107.101.156:3307/999?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai"
+          druid: # 以下参数针对每个库可以重新设置druid参数
+            initial-size: 2
+        slave:   #read数据
+          username: root
+          password: root
+          url: "jdbc:mysql://47.107.101.156:3308/999?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai"
+          druid: # 以下参数针对每个库可以重新设置druid参数
+            initial-size: 2
+#端口设置
 server:
   port: 8090
   servlet:
@@ -43,8 +69,3 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto
-
-
-
-
-
