--- a/persional-center/address-management/pom.xml
+++ b/persional-center/address-management/pom.xml
@@ -16,8 +16,15 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <dynamic.version>3.1.1</dynamic.version>
     </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+            <version>${dynamic.version}</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
