--- a/persional-center/quick-payment/pom.xml
+++ b/persional-center/quick-payment/pom.xml
@@ -16,8 +16,27 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <dynamic.vision>3.1.1</dynamic.vision>
     </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+            <version>${dynamic.vision}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>swagger-bootstrap-ui</artifactId>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
